# DistributedKeyValueStore

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  database_ops  database_ops.cc  database_ops.cpp  database_ops.h  grpc_server.cc  grpc_server.cpp  kvstore.db  kvstore.pb.h  kvstore.proto
proto/: datastore.proto  keyvaluestore.proto
src/: datastore.rs  keyvaluestore.rs  main.rs  sqlite.rs
