[package]
name = "mini_project_1"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic="0.2.0"
tokio={version = "0.2.18", features = ["full"]}
prost = "0.6.1"
futures = "0.3"
moka = {version = "0.12.8", features = ["future"]}
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = {version = "0.32.1", features=["bundled"]}

[build-dependencies]
tonic-build = "0.2.0"
